...
        SettingsHomeSection.Account,
        R.string.settings_profile_keys,
        R.drawable.ic_settings_key,
        "profile_keys",
        SettingsDetail.AccountKeys,
    ),
    Relays(
        SettingsHomeSection.Account,
        R.string.relays,
        R.drawable.ic_settings_cell_tower,
        "relays",
        SettingsDetail.Relays,
    ),
...
