appId: dev.ipf.whitenoise.android.maestrolab
name: groups-members
---
- runFlow: ../fixtures/runtime-ready.yaml
- assertVisible: "Maestro group"
- tapOn: "Maestro group"
- runFlow: ../fixtures/assert-fixture-conversation.yaml
- tapOn: "Maestro group"
- assertVisible:
    id: "chat_info.list"
- scrollUntilVisible:
    element:
      id: "chat_info.members"
    direction: DOWN
- assertVisible: "Maestro Bob"
- assertVisible: "You"
